log/build_2024-04-22_12-52-22/uav_urdf_demo/stderr.log
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp: In member function ‘geometry_msgs::msg::Quaternion StatePublisher::euler_to_quaternion(float, float, float)’:
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:36:61: error: no matching function for call to ‘geometry_msgs::msg::Quaternion_<std::allocator<void> >::Quaternion_(float&, float&, float&, float&)’
   36 |         return geometry_msgs::msg::Quaternion(qx, qy, qz, qw);
      |                                                             ^
In file included from /opt/ros/galactic/include/geometry_msgs/msg/detail/transform__struct.hpp:21,
                 from /opt/ros/galactic/include/geometry_msgs/msg/detail/transform_stamped__struct.hpp:21,
                 from /opt/ros/galactic/include/geometry_msgs/msg/transform_stamped.hpp:7,
                 from /home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:5:
/opt/ros/galactic/include/geometry_msgs/msg/detail/quaternion__struct.hpp:52:12: note: candidate: ‘geometry_msgs::msg::Quaternion_<ContainerAllocator>::Quaternion_(const ContainerAllocator&, rosidl_runtime_cpp::MessageInitialization) [with ContainerAllocator = std::allocator<void>]’
   52 |   explicit Quaternion_(const ContainerAllocator & _alloc, rosidl_runtime_cpp::MessageInitialization _init = rosidl_runtime_cpp::MessageInitialization::ALL)
      |            ^~~~~~~~~~~
/opt/ros/galactic/include/geometry_msgs/msg/detail/quaternion__struct.hpp:52:12: note:   candidate expects 2 arguments, 4 provided
/opt/ros/galactic/include/geometry_msgs/msg/detail/quaternion__struct.hpp:35:12: note: candidate: ‘geometry_msgs::msg::Quaternion_<ContainerAllocator>::Quaternion_(rosidl_runtime_cpp::MessageInitialization) [with ContainerAllocator = std::allocator<void>]’
   35 |   explicit Quaternion_(rosidl_runtime_cpp::MessageInitialization _init = rosidl_runtime_cpp::MessageInitialization::ALL)
      |            ^~~~~~~~~~~
/opt/ros/galactic/include/geometry_msgs/msg/detail/quaternion__struct.hpp:35:12: note:   candidate expects 1 argument, 4 provided
/opt/ros/galactic/include/geometry_msgs/msg/detail/quaternion__struct.hpp:31:8: note: candidate: ‘constexpr geometry_msgs::msg::Quaternion_<std::allocator<void> >::Quaternion_(const geometry_msgs::msg::Quaternion_<std::allocator<void> >&)’
   31 | struct Quaternion_
      |        ^~~~~~~~~~~
/opt/ros/galactic/include/geometry_msgs/msg/detail/quaternion__struct.hpp:31:8: note:   candidate expects 1 argument, 4 provided
/opt/ros/galactic/include/geometry_msgs/msg/detail/quaternion__struct.hpp:31:8: note: candidate: ‘constexpr geometry_msgs::msg::Quaternion_<std::allocator<void> >::Quaternion_(geometry_msgs::msg::Quaternion_<std::allocator<void> >&&)’
/opt/ros/galactic/include/geometry_msgs/msg/detail/quaternion__struct.hpp:31:8: note:   candidate expects 1 argument, 4 provided
make[2]: *** [CMakeFiles/state_publisher.dir/build.make:63: CMakeFiles/state_publisher.dir/src/state_publisher.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/state_publisher.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
